[tool.pyupgrade]
py312-plus = true

[tool.ruff]
fix = true
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.extend-per-file-ignores]
"core/settings/*.py" = ["F405", "F403"]

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.poetry]
name = "db-dumper"
version = "0.1.0"
description = ""
authors = ["bubaley <bubaley.fu@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
pydantic = "^2.9.2"
paramiko = "^3.5.0"
loguru = "^0.7.2"
boto3 = "^1.35.48"
celery = "^5.4.0"
redis = "^5.2.0"
pydantic-settings = "^2.6.0"
fastapi = "^0.115.3"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
pre-commit = "^4.0.1"
