[project]
name = "dumper"
version = "0.1.0"
description = ""
requires-python = "==3.13.*"
dependencies = [
    "air-drf-relation>=0.6.1",
    "boto3==1.35.51",
    "celery>=5.5.0",
    "cryptography>=44.0.2",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "django-extensions>=3.2.3",
    "django-filter>=24.3",
    "django>=5.1.2",
    "djangorestframework-simplejwt>=5.5.0",
    "djangorestframework>=3.15.2",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "paramiko>=3.5.1",
    "psycopg[binary]>=3.2.6",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "sentry-sdk>=2.25.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.11.4",
]

[tool.pyupgrade]
py313-plus = true

[tool.ruff]
fix = true
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.extend-per-file-ignores]
"core/settings/*.py" = ["F405", "F403"]

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = false
line-ending = "auto"
